# mortgage-tools

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
project_docs/: README.md
project_docs/docs/: schema.md
project_docs/preferences/: general.md  project.md
project_docs/prompts/: analyzer_prompt.md  generator_prompt.md
project_docs/requirements/: requirements.md  understanding.md
src/mortgage_tools/: app.py
tests/: test_app.py
