[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mortgage-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.49.1",
]

[dependency-groups]
dev = ["pytest", "pytest-cov", "pytest-mock", "ruff"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mortgage_tools*"]

[tool.setuptools.package-data]
"mortgage_tools" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
--cov
"""

[tool.coverage.run]
branch = true
source = ["src/mortgage_tools"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # bugbear
    "C4",  # comprehensions
    "TID", # tidy imports
    "G",   # lazy logging
    "PTH", # pathlib
    "D",   # docstring style
]
ignore = []
unfixable = [
    "F401", # unused imports
]

[tool.ruff.lint.isort]
known-first-party = ["mortgage_tools"]

[tool.ruff.lint.pydocstyle]
convention = "google"
